# lmu-mlops-ss25

./: .gcloudignore  .gcloudignore.api  .gitignore  .pre-commit-config.yaml  README.md  coverage.txt  data.dvc  profile.out  profile_output.prof  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: data-change.yaml  load_api_test.yaml  model-change.yaml  pre_commit.yaml  tests.yaml  update_pre_commit.yaml
api/: main.py  sentiment_monitoring.py
cloudbuild/: build_api_docker_image.yaml  build_docker_images.yaml  build_monitoring_docker_image.yaml  cloudrun_monitoring.yaml  vertex_config.yaml  vertex_sweep_config.yaml
conf/: conf_profiling.yaml  config.yaml  config_hf.yaml  config_pytorch.yaml  sweep.yaml  sweep_pytorch.yaml  sweep_pytorch_2.yaml
data/processed/: .gitignore  sentiment_data.csv.dvc
dockerfiles/: api.dockerfile  backend.dockerfile  frontend.dockerfile  model.dockerfile  sentiment_monitoring.dockerfile  train.dockerfile
frontend/: README.md  app.py
reports/: README.md
serving/: README.md  app.py  backend.py  requirements_backend.txt  requirements_frontend.txt
src/: data.py  eval.py  evaluate.py  model.py  stats.py  train.py  train_config.py  train_depreciated.py  train_hf.py  train_lightning.py
tests/: README.md  locustfile.py  test_api.py  test_data.py  test_model.py
utils/: check_onnx.py  export_onnx.py  train_profiling.py  wandb_test.py
wandb/run-20250617_220920-jk8tjrd4/: run-jk8tjrd4.wandb
(+7 files in other folders)
